components/navBar/Navigation.module.scss
@import '../../styles/_mixins.scss';


.navigation__container {
    background-color: #FFFFFF;
    border-bottom: 2px solid #E1E1E1;
}

.navigation {
    padding: 1rem 7rem 1rem 7rem;
    display: flex;
    justify-content: space-between;
    align-items: center;


    @include respond(tab-land) {
        padding: 1rem 5.5rem;
    }

    @include respond(tab-port) {
        padding: 1rem 4rem;
    }

    @include respond(phone) {
        padding: 1rem 1.5rem;
        gap: 8rem;
    }
}



.navigation__logo {
    display: flex;
    align-items: center;
    z-index: 100;
    // height: 38px;
}


.navigation__links {
    display: flex;
    gap: 6rem;
    list-style: none;
    align-items: center;
    position: relative;

    @include respond(tab-land) {
        display: none;
    }

    // &>li::first-of-type {

    // }
}

// .navigation__links li {
//     display: inline; 
// }

.navigation__links>li a {
    font-family: 'Azo Sans Bd', 'Open Sans', sans-serif;
    color: #000000;
    text-transform: uppercase;
    text-decoration: none;
    padding-bottom: .7rem;
    font-weight: 700;
    font-size: 0.9375rem;
    transition: all .2s ease;
    backface-visibility: hidden;
    border-bottom: 2px solid transparent;
}

// .navigation__links li:first-of-type {}

.hoverNavigation {
    position: absolute;
    top: 50px;
    left: -25px;
    background-color: #FFFFFF;
    padding: 1.8rem 1.4rem;
    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
    border-radius: .9rem;
    z-index: 1000;

    li {
        list-style-type: none;
        margin-right: 3rem;

        &:not(:last-of-type) {
            margin-bottom: .7rem;

        }

        a {
            color: #333333;
        }
    }
}

.navigation__links li a:hover {
    // border-bottom: 2px solid #FF8C00;
    color: #19191B;
}

.navigation__button {
    font-family: 'Azo Sans Bd', 'Open Sans', sans-serif;
    align-self: stretch;
    background-color: #FF8C00;
    border: none;
    color: #FFFFFF;
    font-size: 1.0625rem;
    text-transform: uppercase;
    border-radius: .6rem;
    font-weight: 700;
    text-decoration: none;
    padding: 1rem 4rem;
    transition: all .2s ease;

}

.navigation__button:hover {
    transform: translateY(-1px);
}

.hamburger {
    display: none;


    @include respond(tab-land) {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        width: 1.5rem;
        height: 1.5rem;
        background: transparent;
        border: none;
        cursor: pointer;
        padding: 0;
        z-index: 100;
    }

    @include respond(phone) {
        width: 1rem;
        height: 1rem;
    }


    &:focus {
        outline: none;
    }

    div {
        width: 1.5rem;
        height: 0.1rem;
        background: black;
        border-radius: 10px;
        transition: all 0.3s linear;
        position: relative;
        transform-origin: 1px;

        @include respond(phone) {
            width: 1rem;
        }
    }

}

.open {

    div {
        &:first-child {
            transform: rotate(45deg);
        }

        &:nth-child(2) {
            opacity: 0;
            transform: translateX(20px);
        }

        &:nth-child(3) {
            transform: rotate(-45deg);
        }
    }
}

.hamburgerMenuContainer {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
    background-color: #FFF9F2;
    width: 100vw;
    height: 100vh;
}

.hamburgerMenu {
    background-image: url(../../public/assets/images/mapbase.png);
    background-position: center 130%;
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
    padding: 0 1.8rem;
    display: flex;
    flex-direction: column;


    ul {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 1.5rem;
        margin-top: 11rem;
        margin-bottom: 7rem;

        li {
            list-style-type: none;
        }

        a {
            text-decoration: none;
            text-transform: uppercase;
            font-family: 'Azo Sans Md', 'Open Sans', sans-serif;
            font-size: 25px;
            font-weight: 500;
            line-height: 33px;
            letter-spacing: 0px;
            text-align: center;
            color: #333333;
        }
    }

    &>a {
        color: #FFFFFF;
        padding: 1rem 0;
        font-family: 'Azo Sans Bd', 'Open Sans', sans-serif;
        font-size: 11px;
        font-weight: 700;
        line-height: 14px;
        letter-spacing: -0.3576743006706238px;
        text-align: center;
        text-transform: uppercase;
        text-decoration: none;
        display: block;
        background-color: #FF8C00;
        border-radius: .5rem;
        align-self: center;
        padding: 1rem 5.5rem;

        @include respond(tab-port) {
            align-self: stretch;
            padding: 1rem 0;
        }
    }


}

